...
                          ],
                          borderRadius: BorderRadius.circular(12.0),
                        ),
                        child: Padding(
                          padding: EdgeInsets.all(2.0),
                          child: TextFormField(
                            key: ValueKey('TextField_8c61'),
                            controller: _model.emailTextController,
                            focusNode: _model.textFieldFocusNode1,
                            autofocus: false,
                            obscureText: false,
                            decoration: InputDecoration(
                              labelText: FFLocalizations.of(context).getText(
...
                        child: Column(
                          mainAxisSize: MainAxisSize.max,
                          children: [
                            Padding(
                              padding: EdgeInsets.all(2.0),
                              child: TextFormField(
                                key: ValueKey('TextField_fz61'),
                                controller: _model.passwordTextController,
                                focusNode: _model.textFieldFocusNode2,
                                onChanged: (_) => EasyDebounce.debounce(
                                  '_model.passwordTextController',
                                  Duration(milliseconds: 2000),
                                  () async {
...
                          ],
                          borderRadius: BorderRadius.circular(12.0),
                        ),
                        child: Padding(
                          padding: EdgeInsets.all(2.0),
                          child: TextFormField(
                            key: ValueKey('TextField_iiel'),
                            controller: _model.confirmPasswordTextController,
                            focusNode: _model.textFieldFocusNode3,
                            obscureText: !_model.passwordVisibility2,
                            decoration: InputDecoration(
                              labelText: FFLocalizations.of(context).getText(
                                '20pmuh66' /* Confirm Password */,
...
