...
                            alignment: AlignmentDirectional(0.0, 1.0),
                            child: AuthUserStreamWidget(
                              builder: (context) => wrapWithModel(
                                model: _model.navBarFlotingModel,
                                updateCallback: () => setState(() {}),
                                child: NavBarFlotingWidget(
                                  key: ValueKey('NavBarFloting_wocd'),
                                  canAddFile: true,
                                  currentFolder:
                                      currentUserDocument?.rootFolder,
                                ),
                              ),
                            ),
...
